test_src/compiler_errors/types/boolean/AndNumberError2.b
class AndNumberError1 {
    void test() {
        println(true && 0.0);
    }
}
